src/test/ui/issues/issue-104870.stderr
error[E0382]: use of moved value: `x`
  --> $DIR/issue-104870.rs:16:7
   |
LL | fn f(x: *mut u8) {
   |      - move occurs because `x` has type `*mut u8`, which does not implement the `Copy` trait
LL |     g(x);
   |       - value moved here
LL |     g(x);
   |       ^ value used here after move
   |
note: consider changing this parameter type in function `g` to borrow instead if owning the value isn't necessary
  --> $DIR/issue-104870.rs:12:12
   |
LL | fn g<T>(x: T) {}
   |    -       ^ this parameter takes ownership of the value
   |    |
   |    in this function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
